package br.edu.ifc.enums;

public enum Status {

    DONE,
    DOING,
    TODO
}
